--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         cost_components_dict = JSON.parse(cost_components_json);
         //alert(JSON.stringify(cost_components_dict["RU"]))
       
-      initializeModal();
+      //initializeModal();
       updateTable();
       updateAttackerText();
     }
